Draf-1 login page

--- a/login.html
+++ b/login.html
@@ -1,1 +1,52 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+</head>
+<body>
+        <header>
+            <nav class="navigation">
+                <div>
+                    <h1 class="logo">Twitwor</h1>
+                </div>
+                <div class="navigation-list">
+                    <ul>
+                    <li><a href="">Beranda</a></li>
+                    <li><a href="">Masuk</a></li>
+                    <li><a href="">Tentang</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
+        <main>
+            <section class="section-2col">
+                <h1>Twitwor</h1>
+                <h3>Ada keributan apa hari ini?</h3>
+                <p>
+                    Selamat datang di ruang bebas toxic!
+                    Mengumpat <em>made easy</em>
+                </p>
+            </section>
 
+            <section class="section-1col">
+                <div>
+                    <form action="" class="login-card">
+                        <input type="text" name="username" id="username" placeholder="username">
+                        <input type="password" name="password" id="password" placeholder="password">
+                    </form>
+                </div>
+                <div class="h-div">
+                    <button>Masuk</button>
+                    <button class="join-btn">Daftar</button>
+                </div>
+            </section>
+        </main>
+        <footer>
+            2022 - Twitwor
+        </footer>
+</body>
+</html>
