validasi login, penggabungan fungsi, penambahan class, marger on manual etc please review

--- a/login.html
+++ b/login.html
@@ -40,7 +40,7 @@
                     </form>
                 </div>
                 <div class="h-div">
-                    <button>Masuk</button>
+                    <button id="login" onclick="login()">Masuk</button>
                     <button class="join-btn">Daftar</button>
                 </div>
             </section>
@@ -48,5 +48,6 @@
         <footer>
             2022 - Twitwor
         </footer>
+        <script src="index.js"></script>
 </body>
 </html>
