update 2 - add user info in post card and add delete button

--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Selamat Datang di Twitwor</title>
 </head>
 <body>
         <header>
@@ -33,15 +33,18 @@
             </section>
 
             <section class="section-1col">
-                <div>
-                    <form action="" class="login-card">
+                <div class="login-card">
+                    <!-- tag form dihilangkan -->
                         <input type="text" name="username" id="username" placeholder="username">
                         <input type="password" name="password" id="password" placeholder="password">
-                    </form>
+                        <div class="h-div">
+                            <button>Masuk</button>
+                            <button class="join-btn">Daftar</button>
+                        </div>
                 </div>
-                <div class="h-div">
-                    <button>Masuk</button>
-                    <button class="join-btn">Daftar</button>
+                <div>
+                    <p>
+                    </p>
                 </div>
             </section>
         </main>
