--- a/login.html
+++ b/login.html
@@ -27,24 +27,22 @@
                 <h1>Twitwor</h1>
                 <h3>Ada keributan apa hari ini?</h3>
                 <p>
-                    Selamat datang di ruang bebas toxic!
-                    Mengumpat <em>made easy</em>
+                    Temukan dan bergabung dalam keributan yang cocok denganmu!
                 </p>
+                <div class="v-div" style="align-items: flex-start;">
+                    <img src="img/login-2.png" style="height: 500px; width:500px";>
+                </div>
             </section>
-
+            
             <section class="section-1col">
                 <div class="login-card">
                     <!-- tag form dihilangkan -->
-                        <input type="text" name="username" id="username" placeholder="username">
-                        <input type="password" name="password" id="password" placeholder="password">
-                        <div class="h-div">
-                            <button>Masuk</button>
-                            <button class="join-btn">Daftar</button>
-                        </div>
-                </div>
-                <div>
-                    <p>
-                    </p>
+                    <input type="text" name="username" id="username" placeholder="username">
+                    <input type="password" name="password" id="password" placeholder="password">
+                    <div class="h-div">
+                        <button>Masuk</button>
+                        <button class="join-btn">Daftar</button>
+                    </div>
                 </div>
             </section>
         </main>
