--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
                     <div class="h-div">
                         <img src="img/profile-1.jpg" alt="">
                         <div class="v-div">
-                            <p>User Name</p>
-                            <p>@username</p>
+                            <p class="name">User Name</p>
+                            <hr>
+                            <p class="username">@username</p>
                         </div>
                     </div>
 
