--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <ul>
                 <li><a href="">Beranda</a></li>
                 <li><a href="">Profil</a></li>
-                <li><a href="login.html" >Pengaturan</a></li>
+                <li><a href="login.html" >Logout</a></li>
                 </ul>
             </div>
         </nav>
@@ -26,14 +26,10 @@
                 <div class="profile-card">
                     <div class="h-div" id="profilecard">
                         <img src="img/profile-1.jpg" alt="">
-                    <div class="h-div">
-                        <img src="img/profile-1.jpg" alt="">
-                        <div class="v-div">
-                        </div>
                     </div>
                 </div>
             </section>
-            <section id="post-list">
+            <section >
                 <div class="posting-form v-div">
                     <textarea name="" id="postedtext" cols="30" rows="3" placeholder="Ada keributan apa hari ini?"></textarea>
                     <button onclick="getpost()" id="">Post</button>
@@ -50,7 +46,9 @@
                 </div>
                 <hr>
                 <!-- running on read data -->
+                <section id="post-list">
 
+                </section>
             </section>
 
         </main>
